@@ -1,5 +1,11 @@
 2008-01-17  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (foo_manager_running_cb): make sure to stop any ongoing animation
+			idle handler if NM disappears
+
+2008-01-17  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-dbus-settings.c
 	  src/applet-dbus-settings.h
 		- (update_user_connections): new function; factor out common code to
